tests/functional2/lang/or/parse-fail-2.err.exp
error: syntax error, expecting expression
       at /pwd/in.nix:1:10:
            1| with {}; or
             |          ^
            2|
